[package]
name = "regex-wasm-demo"
version = "0.1.0"
authors = ["Andrei Matveiakin <a.matveiakin@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

# regex = { version = "1.6.0", default-features = false, features = ["std"] }
# regex = { version = "1.6.0", default-features = false, features = ["std", "perf"] }
# regex = { version = "1.6.0", default-features = false, features = ["std", "unicode"] }
regex = "1.6.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
